# HWI

./: .cirrus.yml  .dockerignore  .flake8  .gitignore  .readthedocs.yml  .travis.yml  LICENSE  README.md  base58.py  coldcardi.py  commands.py  device_ids.py  digitalbitboxi.py  firmwaredl.py  firmwaredl.spec  hwi-qt.py  hwi-qt.spec  hwi.py  hwi.spec  keepkeyi.py  ledgeri.py  mypy.ini  pyproject.toml  requirements.txt  serializations.py  setup.py  test_psbt.py  trezori.py
.github/: sim-build-map.json
.github/actions/build-bitcoind/: action.yml
.github/actions/build-sim/: action.yml
.github/actions/install-sim/: action.yml
.github/actions/test-device/: action.yml
.github/actions/test-dist/: action.yml
.github/workflows/: ci.yml  coldcard-firmware-seed.yml  device-test.yml  ledger-app-builder.yml  ledger-legacy-app-builder.yml  prepare-sim-matrices.yml  release.yml  sim-builder-coldcard.yml  sim-builder.yml  type-check.yml
ci/: build_bitbox02.sh  cirrus.Dockerfile  ledger-app-builder.Dockerfile  py310.Dockerfile  py311.Dockerfile  py36.Dockerfile  py37.Dockerfile  py38.Dockerfile  py39.Dockerfile
contrib/: README.md  autopep8.sh  build-wine.Dockerfile  build.Dockerfile  build_bin.sh  build_bin_no_gui.sh  build_dist.sh  build_dist_no_gui.sh  build_wine.sh  det-build-requirements.txt  exclude-zlib.diff  generate-ui.sh  generate_setup.sh  make_shasums.sh  reproducible-python.diff
contrib/pyinstaller-hooks/: hook-hwilib.devices.py
docs/: bitbox02.md  bitcoin-core-usage.md  coldcard.md  conf.py  dcent.md  digitalbitbox.md  examples.md  index.rst  keepkey.md  ledger.md  release-process.md  requirements.txt  trezor.md
docs/development/: index.rst  internal-api.rst  release-process.rst
docs/devices/: index.rst  pkcs11.rst
docs/examples/: bitcoin-core-usage.rst  examples.rst  index.rst
docs/usage/: api-usage.rst  cli-usage.rst  index.rst  installation.rst
docs/walk-through/: README.rst
hwilib/: __init__.py  _base58.py  _bech32.py  _cli.py  _gui.py  _script.py  _serialize.py  base58.py  bech32.py  bip32.py  cli.py  coldcardi.py  commands.py  common.py  descriptor.py  digitalbitboxi.py  errors.py  firmware.py  gui.py  hwwclient.py  keepkeyi.py  key.py  ledgeri.py  psbt.py  script.py  serializations.py  trezori.py  tx.py  udevinstaller.py  wallet_policy.py
hwilib/devices/: __init__.py  bitbox02.py  checksig.py  coldcard.py  dcent.py  digitalbitbox.py  jade.py  keepkey.py  ledger.py  onekey.py  pkcs11.py  specter.py  tapsigner.py  trezor.py
hwilib/udev/: 20-hw1.rules  51-coinkite.rules  51-dcent.rules  51-onekey.rules  51-trezor.rules  51-usb-keepkey.rules  55-usb-jade.rules  README.md
hwilib/ui/: bitbox02pairing.ui  displayaddressdialog.ui  getkeypooloptionsdialog.ui  getxpubdialog.ui  hwiqt.pyproject  mainwindow.ui  sendpindialog.ui  setpassphrasedialog.ui  signmessagedialog.ui  signpsbtdialog.ui
test/: README.md  authproxy.py  run_tests.py  setup_environment.sh  test_base58.py  test_bech32.py  test_bip32.py  test_bitbox02.py  test_coldcard.py  test_descriptor.py  test_device.py  test_digitalbitbox.py  test_jade.py  test_keepkey.py  test_ledger.py  test_onekey.py  test_pkcs11.py  test_psbt.py  test_tapsigner.py  test_trezor.py  test_udevrules.py
test/data/: bip32_vectors.json  bitcoind_taproot_psbt.patch  bitcoind_taproot_psbt2.patch  coldcard-ffilib.patch  coldcard-libngu.patch  coldcard-linux-sock.patch  coldcard-multisig-setup.patch  coldcard-multisig.patch  coldcard_xpubs.json  keepkey-build.patch  keepkey-googletest.patch  nanopb-deprecated-mode.patch  psbt_non_witness_utxo_segwit.patch  speculos-auto-button.patch  speculos-automation.json  speculos-screen-text.patch  test_bip32.json  test_psbt.json  trezor-t-build.patch
test/setup/: setup_bitbox01.sh  setup_bitcoind.sh  setup_coldcard.sh  setup_keepkey.sh  setup_ledger.sh  setup_trezor_1.sh  setup_trezor_t.sh
udev/: README.md
(+150 files in other folders)
