[tool.poetry]
name = "hwi"
version = "2.1.1"
description = "A library for working with Bitcoin hardware wallets"
authors = ["Andrew Chow <andrew@achow101.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/bitcoin-core/HWI"
homepage = "https://github.com/bitcoin-core/HWI"
exclude = ["docs/", "test/"]
include = ["hwilib/**/*.py", "udev/", "hwilib/py.typed"]
packages = [
    { include = "hwi.py" },
    { include = "hwi-qt.py" },
    { include = "hwilib" },
]

[tool.poetry.dependencies]
python = "^3.6"
hidapi = "~0"
ecdsa = "~0"
pyaes = "^1.6"
mnemonic = "~0"
typing-extensions = "^3.7"
libusb1 = ">=1.7,<3"
pyside2 = { version = "^5.14.0", optional = true, python = "<3.10" }
bitbox02 = ">=6.0.0,<7.0.0"
cbor = "^1.0.0"
pyserial = "^3.5"
dataclasses = {version = "^0.8", python = ">=3.6,<3.7"}

[tool.poetry.extras]
qt = ["pyside2"]

[tool.poetry.dev-dependencies]
pyinstaller = "^4.0"
autopep8 = "~1"
flake8 = ">=3"
mypy = "~0"
sphinx = ">=4"
sphinx-rtd-theme = "~1"
sphinxcontrib-autoprogram = "~0"

[tool.poetry.scripts]
hwi = 'hwilib._cli:main'
hwi-qt = 'hwilib._gui:main'

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
