[tool.poetry]
name = "hwi"
version = "3.1.0"
description = "A library for working with Bitcoin hardware wallets"
authors = ["Ava Chow <me@achow101.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/bitcoin-core/HWI"
homepage = "https://github.com/bitcoin-core/HWI"
exclude = ["docs/", "test/"]
include = ["hwilib/**/*.py", "udev/", "hwilib/py.typed"]
packages = [
    { include = "hwi.py" },
    { include = "hwi-qt.py" },
    { include = "hwilib" },
]

[tool.poetry.dependencies]
python = "^3.8,<3.13"
hidapi = ">=0.14.0"
ecdsa = "~0"
pyaes = "^1.6"
mnemonic = "~0"
typing-extensions = "^4.4"
libusb1 = ">=1.7,<4"
pyside2 = { version = "^5.14.0", optional = true, python = "<3.10" }
cbor2 = "^5.4.6"
pyserial = "^3.5"
dataclasses = {version = "^0.8", python = ">=3.6,<3.7"}
semver = "^3.0.1"
noiseprotocol = "^0.3.1"
protobuf = "^4.23.3"

[tool.poetry.extras]
qt = ["pyside2"]

[tool.poetry.dev-dependencies]
pyinstaller = "^6.3"
autopep8 = "~1"
flake8 = ">=3"
mypy = "~0"
sphinx = ">=4"
sphinx-rtd-theme = "~1"
sphinxcontrib-autoprogram = "~0"

[tool.poetry.scripts]
hwi = 'hwilib._cli:main'
hwi-qt = 'hwilib._gui:main'

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry.build]
generate-setup-file = true
